--- a/mnim/makefile
+++ b/mnim/makefile
@@ -1,14 +1,14 @@
 cc=g++
 exe=main
-obj=main.o Graph.o HBI.o
+obj=main.o Graph.o Model.o
 $(exe):$(obj)
 	$(cc) -o $(exe) $(obj)
-main.o: main.cpp HBI.h
+main.o: main.cpp Model.h
 	$(cc) -c main.cpp
 Graph.o: Graph.cpp Graph.h BaseObj.h
 	$(cc) -c Graph.cpp
-HBI.o: HBI.cpp HBI.h Graph.h limit.h
-	$(cc) -c HBI.cpp
+Model.o: Model.cpp Model.h Graph.h limit.h
+	$(cc) -c Model.cpp
 
 .PYTHON:clean
 clean:
