添加返回变量
添加传播模型计算后的返回变量，便于寻找top-k seed所用

--- a/mnim/makefile
+++ b/mnim/makefile
@@ -1,6 +1,6 @@
 cc=g++
 exe=main
-obj=main.o Graph.o Model.o
+obj=main.o Graph.o Model.o Seed.o Heap.o
 $(exe):$(obj)
 	$(cc) -o $(exe) $(obj)
 main.o: main.cpp Model.h
@@ -9,7 +9,10 @@ Graph.o: Graph.cpp Graph.h BaseObj.h
 	$(cc) -c Graph.cpp
 Model.o: Model.cpp Model.h Graph.h limit.h
 	$(cc) -c Model.cpp
-
+Seed.o: Seed.cpp Seed.h Model.h BaseObj.h Heap.h
+	$(cc) -c Seed.cpp
+Heap.o: Heap.cpp Heap.h BaseObj.h
+	$(cc) -c Heap.cpp
 .PYTHON:clean
 clean:
 	-rm -fr *.o
