修改点构造，使用数值代替，简化代码复杂度
主要构造两张map，点-点id,点-点net,点id-点set

--- a/mnim/makefile
+++ b/mnim/makefile
@@ -1,7 +1,7 @@
 cc=g++
 ccflags=-O3 -std=c++11
 exe=main
-obj=main.o Graph.o Model.o Seed.o Heap.o
+obj=main.o- Graph.o Model.o Seed.o Heap.o
 
 $(exe):$(obj)
 	$(cc) ${ccflags} -o $(exe) $(obj)
