完成大顶堆上的修改和对模型的完善

--- a/imms/makefile
+++ b/imms/makefile
@@ -1,7 +1,7 @@
 cc=g++
 ccflags=-O3 -std=c++11
 exe=main
-objs=main.o Graph.o Model.o
+objs=main.o Graph.o Model.o Heap.o BaseLine.o
 $(exe):$(objs)
 	$(cc) ${ccflags} -o $(exe) $(objs)
 main.o: main.cpp Model.h
@@ -10,6 +10,11 @@ Graph.o: Graph.cpp Graph.h Objects.h
 	$(cc) ${ccflags} -c Graph.cpp
 Model.o: Model.cpp Model.h Graph.h limit.h Objects.h
 	$(cc) ${ccflags} -c Model.cpp
+Heap.o: Heap.cpp Heap.h Objects.h
+	$(cc) ${ccflags} -c Heap.cpp
+BaseLine.o: BaseLine.cpp BaseLine.h Limit.h
+	$(cc) ${ccflags} -c BaseLine.cpp
+
 .PYTHON:clean
 clean:
 	-rm -fr *.o
